# rpi4-motor-app

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json
ConfigReader/src/: configreader.cc
ImageProcessing/: acquisition.cc  acquisition.h  acquisitionraspi.cc  acquisitionraspi.h  acquisitionraspicam.cc  acquisitionraspicam.h  bounds.cc  bounds.h  capture.cc  capture.h
_ConfigReader2/include/: configreader.h
raspicam-0.1.8/src/: raspicam_cv.cpp  raspicam_still_cv.cpp
raspicam-0.1.8/src/private/: private_impl.cpp  threadcondition.cpp  threadcondition.h
raspicam-0.1.8/utils/: raspicam_cv_still_test.cpp  raspicam_cv_test.cpp
raspicam-0.1.9/src/private/: private_impl.cpp  threadcondition.cpp  threadcondition.h
src/: i2c_arduino_control.cc  i2c_arduino_control.h  main.cc  mainloop.cc  mainloop.h  serialportreader.cc  serialportreader.h  serialportwriter.cc  serialportwriter.h  structures.h  uart.cc  uart.h
